# Chimera-Intel

./: .buildinfo  .coverage  .dockerignore  .env.example  .gitIgnore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.mlint  LICENSE  Makefile  README.md  SYNTHETIC_MEDIA_DEPLOYMENT.MD  alembic.ini  config.yaml  docker-compose.yml  genindex.html  index.html  install_plugins.py  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test.json  webapp.py
.github/workflows/: ci-cd.yml  ci.yml  docs.yml
Modules/: ai_core.py  business_intel.py  config_loader.py  database.py  defensive.py  footprint.py  grapher.py  web_analyzer.py
Templates/: index.html
Tests/: imint.py  test_acint.py  test_action_governance.py  test_active_brand_protection.py  test_active_recon.py  test_advanced_analytics.py  test_advanced_media_analysis.py  test_advanced_reasoning_engine.py  test_adversary_simulator.py  test_adversary_voice_matcher.py  test_ai_core.py  test_aia_framework.py  test_ainews.py  test_alert_manager.py  test_alternative_hypothesis_generator.py  test_analyst_opsec.py  test_analytics.py  test_appint.py  test_arg_fuser.py  test_arg_service.py  test_attack_path_simulator.py  test_attribution.py  test_audit_logger.py  test_automation.py  test_autonomous.py  test_avint.py  test_behavioral_analyzer.py  test_bias_audit.py  test_bioint.py  test_biomint.py  test_blockchain_osint.py  test_blockchain_tracer.py  test_brand_protection_pipeline.py  test_briefing_generator.py  test_business_intel.py  test_c_pint.py  test_cci.py  test_channel_intel.py  test_chemint.py  test_cli.py  (+215 more)
_modules/: index.html
docs/: Makefile  conf.py  index.rst  modules.rst
migrations/: env.py
plugins/chimera-behavioral/: pyproject.toml
plugins/chimera-deception/: pyproject.toml
plugins/chimera-deception/src/chimera-deception/: main.py
plugins/chimera-financial_market_signals/: pyproject.toml
plugins/chimera-financial_market_signals/src/chimera-financial_market_signals/: main.py
plugins/chimera-humint/: pyproject.toml
plugins/chimera-media/: pyproject.toml
plugins/chimera-media/src/chimera-media/: main.py
plugins/chimera-temporal/: pyproject.toml
plugins/chimera-temporal/src/chimera_temporal/: main.py
plugins/chimera-wsa/: pyproject.toml
plugins/chimera-wsa/src/chimera-wsa/: main.py
plugins/chimera_action_governance/: pyproject.toml
plugins/chimera_action_governance/src/chimera_action_governance/: main.py
plugins/chimera_active_brand_protection/: pyproject.toml
plugins/chimera_active_brand_protection/src/chimera_active_brand_protection/: main.py
plugins/chimera_active_ci/: pyproject.toml
plugins/chimera_active_ci/src/chimera_active_ci/: main.py
plugins/chimera_active_recon/: pyproject.toml
plugins/chimera_active_recon/src/chimera_active_recon/: main.py
plugins/chimera_advanced_analytics/: pyproject.toml
plugins/chimera_advanced_analytics/src/chimera_advanced_analytics/: main.py
plugins/chimera_advanced_media/: pyproject.toml
plugins/chimera_advanced_media/src/chimera_advanced_media/: main.py
plugins/chimera_adversary_simulator/: pyproject.toml
plugins/chimera_adversary_simulator/src/chimera_adversary_simulator/: main.py
plugins/chimera_aia/: pyproject.toml
plugins/chimera_aia/src/chimera_aia/: main.py
plugins/chimera_ainews/: pyproject.toml
plugins/chimera_alerts/: pyproject.toml
plugins/chimera_analysis/: pyproject.toml
plugins/chimera_analysis/src/chimera_analysis/: main.py
plugins/chimera_analyst_opsec/: pyproject.toml
plugins/chimera_analyst_opsec/src/chimera_analyst_opsec/: main.py
plugins/chimera_appint/: pyproject.toml
plugins/chimera_appint/src/chimera_appint/: main.py
plugins/chimera_arg/: pyproject.toml
plugins/chimera_arg/src/chimera_arg/: main.py
plugins/chimera_arg_fuser/: pyproject.toml
plugins/chimera_audit/: pyproject.toml
plugins/chimera_automation/: pyproject.toml
plugins/chimera_autonomous/: pyproject.toml
plugins/chimera_autonomous/src/chimera_autonomous/: main.py
plugins/chimera_avint/: pyproject.toml
plugins/chimera_avint/src/: main.py
plugins/chimera_behavioral/: pyproject.toml
plugins/chimera_bioint/: pyproject.toml
plugins/chimera_biomint/: pyproject.toml
plugins/chimera_biomint/src/chimera_biomint/: main.py
plugins/chimera_blockchain/: pyproject.toml
plugins/chimera_blockchain/src/chimera_blockchain/: main.py
plugins/chimera_blockchain_tracer/: pyproject.toml
plugins/chimera_blockchain_tracer/src/chimera_blockchain_tracer/: main.py
plugins/chimera_brand_protection/: pyproject.toml
plugins/chimera_brand_protection/src/chimera_brand_protection/: main.py
plugins/chimera_business/: pyproject.toml
plugins/chimera_business/src/chimera_business/: main.py
plugins/chimera_c_pint/: pyproject.toml
plugins/chimera_cci/: pyproject.toml
plugins/chimera_cci/src/chimera_cci/: main.py
plugins/chimera_channel/: pyproject.toml
plugins/chimera_channel/src/chimera_channel/: main.py
plugins/chimera_chemint/: pyproject.toml
plugins/chimera_chemint/src/chimera_chemint/: main.py
plugins/chimera_climaint/: pyproject.toml
plugins/chimera_climaint/src/chimera_climaint/: main.py
plugins/chimera_cloud/: pyproject.toml
plugins/chimera_code_intel/: pyproject.toml
plugins/chimera_comint/: pyproject.toml
plugins/chimera_competitor_monitor/: pyproject.toml
plugins/chimera_compint/: pyproject.toml
plugins/chimera_compliance/: main.py  pyproject.toml
plugins/chimera_connect/: pyproject.toml
plugins/chimera_corporate_intel/: pyproject.toml
plugins/chimera_corporate_records/: pyproject.toml
plugins/chimera_covert_agent/: pyproject.toml
plugins/chimera_covert_financial_tracking/: pyproject.toml
plugins/chimera_covert_ops/: pyproject.toml
plugins/chimera_creative_workflow/: pyproject.toml
plugins/chimera_credibility/: pyproject.toml
plugins/chimera_crypto/: pyproject.toml
plugins/chimera_cultural_sentiment/: pyproject.toml
tests/: test_geoint.py  test_opsec_analyzer.py
webapp/: main.py
(+657 files in other folders)
