[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-intel"
version = "6.0.0"
authors = [
    { name = "Ignacio Iliev", email = "ignasioi72@gmail.com" },
]
description = "A modular OSINT platform for corporate intelligence and counter-intelligence, powered by an AI analysis core."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
]

# --- CORE DEPENDENCIES ---
# Essential packages for the application to run.
dependencies = [
    "typer[standard]~=0.19.2",
    "pydantic[email]~=2.11.9",
    "pydantic-settings~=2.10.1",
    "pyyaml~=6.0.3",
    "requests~=2.31.0",
    "httpx[socks]~=0.28.1",
    "websockets~=15.0.1",
    "aiohttp~=3.12.15",
    "networkx~=3.2",
    "docker~=7.0.0",
    "statsmodels~=0.14.0",
    "biopython~=1.81",
    "fastapi~=0.103.1",
    "uvicorn[standard]~=0.23.2",
    "rich~=13.0.0",
    "stix2~=3.0.1",
    "psycopg2-binary~=2.9.9",
    "passlib[bcrypt]~=1.7.4",
    "argon2-cffi~=21.3.0",
    "joblib~=1.4.2",
    "numpy~=1.26.4",
    "scikit-learn~=1.5.0",
    "feedparser~=6.0.10",
    "python-whois~=0.8.0",
    "GitPython~=3.1.43",
    "jsondiff~=2.0.0",
    "google-generativeai~=0.2.2",
    "mitreattack-python~=2.1.0",
    "kaggle~=1.5.12",
    "google-api-python-client~=2.52.0",
    "google-play-scraper~=1.2.4",
    "tensorflow~=2.14.1",
    "neo4j~=5.14.0",
    "python-jose[cryptography]~=3.3.0",
    "python-app-store-scraper~=1.1.1",
    "textblob~=0.17.1",
    "reportlab~=4.2.0",
    "yfinance~=0.2.40",
    "sec-api~=1.0.19",
    "python-nmap~=0.7.1",
    "apscheduler~=3.10.4",
    "httpx-socks~=0.8.0",
    "wbdata~=0.5.1",
    "folium~=0.17.0",
    "googlemaps~=4.10.0",
    "SpeechRecognition~=3.10.4",
    "Wappalyzer~=0.5.1",
    "pymodes~=0.1.3",
    "python-louvain~=0.16",
    "alembic~=1.13.2",
    "hvac~=2.1.0",
    "dnspython~=2.6.1",
    "hibpwned~=2.1.0",
    "shodan~=1.30.0",
    "python-dotenv~=1.0.1",
    "googlesearch-python~=1.2.3",
]

[project.optional-dependencies]
# --- LIGHTWEIGHT TESTING DEPENDENCIES ---
# Packages for core testing, linting, and type analysis.
test = [
    "pytest~=8.2.2",
    "pytest-cov~=5.0.0",
    "pytest-asyncio~=0.23.7",
    "ruff~=0.6.2",
    "black~=24.4.2",
    "mypy~=1.10.0",
    "pip-audit~=2.7.2",
    "python-json-logger~=2.0.7",
    "matplotlib~=3.9.1",
    # Type Stubs
    "pandas-stubs~=2.2.2.240603",
    "scikit-learn-stubs~=0.1.0",
    "types-networkx~=3.2.1.20240428",
    "types-requests~=2.32.0.20240622",
    "types-docker~=7.1.0.20240530",
    "types-PyYAML~=6.0.12.12",
    "types-beautifulsoup4~=4.12.0.20250516",
    "types-psycopg2~=2.9.21.20240523",
    "types-passlib~=1.7.4.20240106",
    "types-python-nmap~=0.7.0.20240428",
    "types-reportlab~=4.2.0",
    "types-sqlalchemy~=2.0.31",
]

# --- HEAVYWEIGHT TESTING DEPENDENCIES ---
# Large packages for ML, data processing, and browser automation.
test-heavy = [
    "pyvis~=0.3.2",
    "tweepy~=4.14.0",
    "playwright~=1.45.0",
    "beautifulsoup4~=4.12.3",
    "torch~=2.3.1",
    "torchvision~=0.18.1",
    "scikit-image~=0.24.0",
    "geopy~=2.4.1",
    "SQLAlchemy~=2.0.31",
    "opencv-python~=4.10.0.84",
    "scapy~=2.5.0",
    "librosa~=0.10.2",
    "pypatent~=0.4.5",
    "scholarly~=1.8.1",
    "pdfplumber~=2024.6.3",
    "python-docx~=1.1.2",
    "overpy~=0.6",
    "sgp4~=2.22",
    "skyfield~=1.48",
]

docs = [
    "sphinx~=7.4.7",
    "sphinx_rtd_theme~=2.0.0",
]

[project.scripts]
chimera = "chimera_intel.cli:app"

[project.urls]
"Homepage" = "https://github.com/IgnacioIliev/chimera-intel"
"Bug Tracker" = "https://github.com/IgnacioIliev/chimera-intel/issues"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sgp4.api",
    "skyfield.api",
    "pandas.*",
    "sklearn.*",
    "networkx.*",
    "dns.*",
    "whois.*",
    "pyvis.*",
    "tweepy.*",
    "playwright.*",
    "bs4.*",
    "torch.*",
    "torchvision.*",
    "shodan.*",
    "skimage.*",
    "geopy.*",
    "sqlalchemy.*",
    "cv2.*",
    "scapy.*",
    "librosa.*",
    "pymodes.*",
    "pypatent.*",
    "scholarly.*",
    "requests.*",
    "pdfplumber.*",
    "docx.*",
    "docker.*",
    "overpy.*",
    "Wappalyzer.*",
]
ignore_missing_imports = true