[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-intel"
version = "6.0.0"
authors = [
    { name = "Ignacio Iliev", email = "ignasioi72@gmail.com" },
]
description = "A modular OSINT platform for corporate intelligence and counter-intelligence, powered by an AI analysis core."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License":: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
]

# --- CORE DEPENDENCIES ---
# Essential packages for the application to run.
dependencies = [
    "typer[standard]>=0.19.2,<0.20.0",
    "pydantic[email]>=2.11.9,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "requests>=2.31.0",
    "httpx[socks]>=0.28.1,<0.29.0",
    "websockets>=15.0.1,<16.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "networkx>=3.2,<4.0",
    "docker>=7.0.0,<8.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    "biopython>=1.81,<2.0.0",
    "fastapi>=0.103.1,<0.104.0",
    "uvicorn[standard]>=0.23.2,<0.24.0",
    "rich>=13.0.0,<14.0.0",
    "stix2>=3.0.1,<4.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "argon2-cffi>=21.3.0,<22.0.0",
    "joblib>=1.4.2,<2.0.0",
    "numpy>=1.26.4,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "feedparser>=6.0.10,<7.0.0",
    "python-whois>=0.8.0,<0.9.0",
    "GitPython>=3.1.43,<4.0.0",
    "jsondiff==2.0.0",
    "google-generativeai>=0.2.2,<0.3.0",
    "mitreattack-python>=2.1.0,<3.0.0",
    "kaggle>=1.5.12,<2.0.0",
    "google-api-python-client>=2.52.0,<3.0.0",
    "google-play-scraper>=1.2.4,<2.0.0",
    "tensorflow==2.14.1",
    "neo4j>=5.14.0,<6.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-app-store-scraper>=1.1.1",
    "textblob>=0.17.1,<0.18.0",
    "reportlab",
    "yfinance",
    "sec-api",
    "python-nmap",
    "apscheduler",
    "httpx-socks",
    "wbdata",
    "folium",
    "googlemaps",
    "SpeechRecognition",
    "python-Wappalyzer",
    "pyModeS>=2.0.0",
    "python-louvain",
    "alembic",
    "hvac",
    "dnspython>=2.6.1,<3.0.0",
    "hibpwned",
    "shodan",
    "python-dotenv",
    "googlesearch-python",
    "sherlock-project>=0.14.3,<0.15.0",
    "pyais>=2.0.0",
    "wbgapi",
    "pubchempy>=1.0.4",
    # Added for media_forensics.py & forensic_vault.py
    "Pillow",
    "google-cloud-vision",
    "rfc3161",
    "cryptography",
    "c2pa-python",
    "newspaper3k",
    
    # Added for data_pipeline.py
    "playwright",
    "beautifulsoup4",
    "boto3",
    "elasticsearch-py",
    "celery[redis]",
    
    # Added for advanced media analysis
    "opencv-python",
    "dlib",
    "face_recognition",
    "pytesseract",
    "h5py",
    
    # Added for Vector Search (CLIP/FAISS)
    "torch",
    "torchvision",
    "faiss-cpu",
    "sentence-transformers",
]

[project.optional-dependencies]
# --- LIGHTWEIGHT TESTING DEPENDENCIES ---
# Packages for core testing, linting, and type analysis.
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "black",
    "mypy",
    "pip-audit",
    "pytest-mock",
    # Missing dependencies identified from logs
    "python-json-logger",
    "matplotlib",
    # Type Stubs
    "pandas-stubs",
    "scikit-learn-stubs",
    "types-networkx",
    "types-requests",
    "types-docker",
    "types-PyYAML>=6.0.12.12,<7.0.0.0",
    "types-beautifulsoup4>=4.12.0.20250516,<4.13.0.0",
    "types-psycopg2>=2.9.21.20240523,<2.10.0.0",
    "types-passlib>=1.7.4.20240106,<1.8.0.0",
    "types-python-nmap>=0.7.0.20240428,<0.8.0.0",
    "types-reportlab~=4.2.0",
    "types-sqlalchemy",
    "types-redis",
]

# --- HEAVYWEIGHT TESTING DEPENDENCIES ---
# Large packages for ML, data processing, and browser automation.
test-heavy = [
    "pyvis",
    "tweepy",
    # "torch", # Moved to core
    # "torchvision", # Moved to core
    "scikit-image",
    "geopy",
    "SQLAlchemy",
    "scapy",
    "librosa",
    "pypatent",
    "scholarly",
    "pdfplumber",
    "python-docx",
    "overpy",
    "sgp4",
    "skyfield",
    "imagehash",
    "spacy",
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
chimera = "chimera_intel.cli:app"

[project.urls]
"Homepage" = "https://github.com/IgnacioIliev/chimera-intel"
"Bug Tracker" = "https://github.com/IgnacioIliev/chimera-intel/issues"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sgp4.api",
    "skyfield.api",
    "pandas.*",
    "sklearn.*",
    "networkx.*",
    "dns.*",
    "whois.*",
    "pyvis.*",
    "tweepy.*",
    "playwright.*",
    "bs4.*",
    "torch.*",
    "torchvision.*",
    "shodan.*",
    "skimage.*",
    "geopy.*",
    "sqlalchemy.*",
    "cv2.*",
    "scapy.*",
    "librosa.*",
    "pymodes.*",
    "pypatent.*",
    "scholarly.*",
    "requests.*",
    "pdfplumber.*",
    "docx.*",
    "docker.*",
    "overpy.*",
    "Wappalyzer.*",
    "boto3.*",
    "elasticsearch.*",
    "celery.*",
    "redis.*",
    "dlib.*",
    "face_recognition.*",
    "pytesseract.*",
    # Added for Vector Search
    "faiss.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true