[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-deception"
version = "1.0.0"
description = "Corporate Deception & Mimicry analysis plugin for Chimera Intel."
requires-python = ">=3.9"

[project.entry-points."chimera_intel.plugins"]
deception = "chimera_deception.main:DeceptionPlugin"