[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-temporal"
version = "1.0.0"
description = "Temporal Analysis plugin for Chimera Intel."
requires-python = ">=3.9"

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
temporal = "chimera_temporal.main:TemporalPlugin"