[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-wsa"
version = "1.0.0"
description = "Weak Signal Amplification (WSA) plugin for Chimera Intel."
requires-python = ">=3.9"

[project.entry-points."chimera_intel.plugins"]
wsa = "chimera_wsa.main:WsaPlugin"