[tool.poetry]
name = "chimera-action-governance"
version = "0.1.0"
description = "Action Governance and Risk Scoring plugin for Chimera Intel."
authors = [{ name = "Ignacio Iliev", email = "ignasioi72@gmail.com" }]

[tool.poetry.dependencies]
python = "^3.10"
# This path assumes the plugin is two directories deep from the project root
chimera-intel = {path = "../../", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"