[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera_advanced_analytics"
version = "0.1.0"
description = "A plugin for advanced AI analytics, including scenario simulation, narrative tracking, and risk scoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Chimera-Intel", email = "dev@chimera.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
dependencies = [
    "typer",
    "chimera-intel",  # Depends on the main package
]

[project.entry-points."chimera_intel.plugin"]
advanced_analytics = "chimera_advanced_analytics.main:plugin"

[project.entry-points.console_scripts]
chimera-analytics-cli = "chimera_advanced_analytics.main:app"