[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera_aia"
version = "0.1.0"
authors = [
    { name = "Ignacio Iliev", email = "ignasioi72@gmail.com" },
]
description = "An AI-powered virtual analyst that can independently manage intelligence tasks with advanced reasoning."
dependencies = [
    "chimera-intel",
]