[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-analysis"
version = "1.0.0"
description = "Advanced Analysis & AI plugin for Chimera Intel."
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.2.2,<0.3.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "jsondiff==2.0.0",
    "transformers>=4.33.1,<5.0.0",
    "torch>=2.0.1,<3.0.0",
]

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
analysis = "chimera_analysis.main:AnalysisPlugin"