[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-appint"
version = "1.0.0"
description = "Mobile Application Intelligence (APPINT) plugin for Chimera Intel."
requires-python = ">=3.9"

[project.entry-points."chimera_intel.plugins"]
appint = "chimera_appint.main:AppintPlugin"