[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-autonomous"
version = "1.0.0"
description = "Autonomous Operations & Self-Improvement Engine for Chimera Intel."
requires-python = ">=3.9"

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
autonomous = "chimera_autonomous.main:AutonomousPlugin"