[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-avint"
version = "1.0.0"
description = "Aviation Intelligence (AVINT) plugin for Chimera Intel."
requires-python = ">=3.9"

[project.entry-points."chimera_intel.plugins"]
avint = "chimera_avint.main:AvintPlugin"