# plugins/chimera_behavioral/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-behavioral"
version = "1.0.0"
authors = [
    { name = "Ignacio Iliev", email = "ignasioi72@gmail.com" },
]
description = "Behavioral & Psychographic OSINT plugin for Chimera Intel."
requires-python = ">=3.9"

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
behavioral = "chimera_behavioral.main:BehavioralPlugin"