[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera_biomint"
version = "0.1.0"
description = "BIOMINT (Biometric Intelligence) plugin for Chimera Intel"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Ignacio Iliev", email = "ignasioi72@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chimera-intel", 
    "face_recognition",
    "opencv-python-headless",
    "dtw-python",
    "pyAudioAnalysis"
]

[project.entry-points."chimera_intel.plugins"]
biomint = "chimera_biomint.main:BiomintPlugin"

[project.urls]
Homepage = "https://github.com/your-repo/Chimera-Intel"
Issues = "https://github.com/your-repo/Chimera-Intel/issues"

[tool.setuptools]
packages = ["chimera_biomint"]
package-dir = { "" = "src" }