[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-blockchain"
version = "1.0.0"
description = "Blockchain OSINT plugin for Chimera Intel."
requires-python = ">=3.9"
dependencies = [
    "web3>=6.12.0,<7.0.0",
]

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
blockchain = "chimera_blockchain.main:BlockchainPlugin"