[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-business"
version = "1.0.0"
description = "Business Intelligence plugin for Chimera Intel."
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.28,<0.3.0",
    "sec-api>=1.0.17,<2.0.0",
]

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
business = "chimera_business.main:BusinessIntelPlugin"