[tool.poetry]
name = "chimera-cci"
version = "0.1.0"
description = "A plugin for Counter-Counter-Intelligence (CCI) and attribution masking."
authors = [{ name = "Ignacio Iliev", email = "ignasioi72@gmail.com" }]

[tool.poetry.dependencies]
python = "^3.10"
chimera-intel = {path = "../../", develop = true}

[tool.poetry.plugins."chimera_intel.plugins.cli"]
"cci" = "chimera_cci.main:plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"