[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-chanint"
version = "0.1.0"
description = "Chimera Intel plugin for channel and acquisition intelligence."
readme = "README.md"
authors = [{ name = "Ignacio Iliev", email = "ignasioi72@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# This plugin has a specific dependency (playwright) that the core
# system might not have. It should be listed here.
dependencies = [
    "playwright"
]

[project.urls]
"Homepage" = "https://github.com/your-repo/Chimera-Intel"
"Bug Tracker" = "https://github.com/your-repo/Chimera-Intel/issues"

# This entry point is crucial for the plugin manager
[project.entry-points."chimera_intel.plugins"]
chanint = "chimera_channel.main:ChannelIntelPlugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chimera_channel*"]