[tool.poetry]
name = "chimera-chemint"
version = "0.1.0"
description = "CHEMINT (Chemical Intelligence) plugin for Chimera-Intel"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
chimera-intel = {path = "../../src/chimera_intel", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Define the entry point for the Chimera-Intel CLI system
[tool.poetry.plugins."chimera_intel.plugins"]
chemint = "chimera_chemint.main:app