[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-chemint"
version = "0.1.0"
authors = [
    { name = "Ignacio Iliev", email = "ignasioi72@gmail.com" },
]
description = "CHEMINT (Chemical Intelligence) plugin for Chimera Intel."
requires-python = ">=3.9"
dependencies = [
    "chimera-intel",
    "typer",
    "pypatent",
    "scholarly",
    "requests",
    "beautifulsoup4",
    "SDSParser",
    "pypdf",
    "pdfplumber",
    "python-docx",
    "rich",
    "lxml",
]

[project.entry-points."chimera_intel.plugins"]
chemint = "chimera_chemint.main:ChemintPlugin"