[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-climaint"
version = "1.0.0"
authors = [{ name = "Ignacio Iliev", email = "ignasioi72@gmail.com" }]
description = "Strategic Climate Intelligence (CLIMAINT) plugin for Chimera Intel."
requires-python = ">=3.9"
dependencies = [
    # Add any new dependencies here, e.g., "pandas"
    # Note: pandas is already used by ecoint, so it's likely in the main venv.
    "pandas>=1.0.0"
]

# This section registers the package as a Chimera Intel plugin
[project.entry-points."chimera_intel.plugins"]
climaint = "chimera_climaint.main:ClimaintPlugin"